--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express-async-handler": "^1.2.0",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
+    "validator": "^13.9.0",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
