--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.3.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
+    "react-icons": "^4.10.1",
     "validator": "^13.11.0",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
