--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jwt-decode": "^3.1.0",
     "date-fns": "^2.30.0",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.0",
