--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mongoose": "^7.3.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "react-icons": "^4.10.1",
     "validator": "^13.11.0",
     "winston": "^3.10.0",
