--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.6",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.3.0",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express-async-handler": "^1.2.0",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
