--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.0",
+    "immer": "^10.0.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
