--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.9.0",
     "handlebars": "^4.7.8",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
